cv.css
body {
	font-family: serif;
	font-size: 16px;
	line-height: 1.6em;
	color: #333;
	background: white;
}

article {
	width: 48em;
	margin: 4em auto;
}

h2 {
	font-weight: normal;
	font-size: 2.4em;
	margin: 1.2em 0 0.4em 0;
	page-break-after: avoid;
}

address {
	font-style: normal;
}

.vcalendar,
address {
	list-style:none;
	padding-left: 12em;
}

.vevent {
	margin-bottom: 0.8em;
}

.vevent .period,
address .label {
	float: left;
	margin-left: -13.3em;
	font-family: sans-serif;
	font-size: 0.9em;
}

p {
	margin: 0 0 0.4em 0;
}

#last-modified {
	opacity: 0.5;
	float: right;
}

@media print {
	body {
		font-size: 9pt;
	}
	
	article {
		padding: 0 4em;
	}

	section {
        page-break-inside: avoid;
	}
	
	#languages {
		
	}
	
	a {
		text-decoration: none;
		color: inherit;
	}
	
	a[title]:after {
		content: " (" attr(title) ")";
	}

	#toggle-details {
		display: none;
	}
}

.less-detailed {
	display: none;
}

.hide-details .less-detailed {
	display: inline;
}

.hide-details .detailed {
	display: none;
}

.hide-details .important-low {
	display: none;
}

#toggle-details {
	opacity: 0.5;
	color: inherit;
	float: right;
	margin-right: 0.5em;
	clear: right;
}

#toggle-details .more-details {
	display: none;
}

.hide-details #toggle-details .more-details {
	display: inline;
}

.hide-details #toggle-details .less-details {
	display: none;
}

